fix for overlapping selects and clicking on thing under mask

--- a/less/uw.select.less
+++ b/less/uw.select.less
@@ -1,7 +1,6 @@
 ul.uw-select {  
   position: absolute;
   list-style: none;
-  z-index: 2;
   padding: 0;
   width: 100%;
   overflow: hidden;
@@ -85,7 +84,9 @@ ul.uw-select {
     height: 54px;
     display: block;
     position: relative;
-    z-index: 2;
+    &:hover{
+        z-index: 2;
+    }
     &:before,
     &:after {      
       display: block;
@@ -110,7 +111,15 @@ ul.uw-select {
   }
   &.open {
     .uw-select-arrow{
+        position: absolute;
         outline: none;
+        z-index: 2;
+        width: 60px;
+        right: 0px;
+        top:0px;
+    }
+    .uw-select-mask {
+        z-index: 2;
     }
   }
 }
